<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    android:background="@color/background_app"
    tools:context=".ProportionModifier.ProportionModifierActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="Mold Form"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRectangle"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/background_second_component_selected"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toStartOf="@id/cardViewRound">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                
                <ImageView
                    android:id="@+id/rectangleImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:tint="@color/white"
                    android:layout_marginBottom="0dp"
                    android:src="@drawable/square_01_24"
                    />

                <TextView
                    android:id="@+id/rectangleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rectangular"
                    android:textAllCaps="true"
                    android:textColor="@color/white">

                </TextView>

                

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRound"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/background_second_component"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toEndOf="@id/cardViewRectangle">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/roundImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/circle_01_24"
                    android:tint="@color/gray"

                    />

                <TextView
                    android:id="@+id/roundText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/round"
                    android:textAllCaps="true"
                    android:textColor="@color/gray">

                </TextView>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mesuresCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/background_second_component"
            app:layout_constraintTop_toBottomOf="@id/cardViewRectangle"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical"

                >

                <TextView
                    android:id="@+id/textViewMoldForm"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="rectangle or round"
                    android:layout_marginBottom="10dp"
                    android:textSize="24sp"
                    android:textAllCaps="true"
                    android:textColor="@color/teal_200"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/textViewHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/height"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/gray"
                        />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/height"
                        android:textSize="18sp"
                        android:layout_marginRight="60dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mesureWidth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/width"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/gray"
                        />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/width"
                        android:textSize="18sp"
                        android:layout_marginRight="60dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mesureLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/gray"
                        />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/length"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginRight="60dp"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mesureDiameter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diameter"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/gray"
                        />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/diameter"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginRight="60dp"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>



            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/quantityMolds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/background_second_component"
            app:layout_constraintTop_toBottomOf="@id/mesuresCardView"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/textViewQuantityMolds"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/number_of_molds"
                android:layout_marginBottom="10dp"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:textColor="@color/teal_200"
                />

            <TextView
                android:id="@+id/textViewNumbreMolds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="@string/number_of_molds"
                android:textSize="18sp"
                android:textColor="@color/gray"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>